add unit testing and linter

--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
 		"@testing-library/user-event": "^7.2.1",
 		"carbon-components": "^10.10.3",
 		"carbon-components-react": "^7.10.3",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.2",
 		"node-sass": "^4.13.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.1",
+		"react-test-renderer": "^16.13.1",
 		"styled-components": "^5.1.0",
 		"yarn": "^1.22.4"
 	},
 	"scripts": {
+		"lint": "eslint",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -43,6 +47,12 @@
 		]
 	},
 	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb": "^18.1.0",
+		"eslint-plugin-import": "^2.20.2",
+		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-react": "^7.19.0",
+		"eslint-plugin-react-hooks": "^2.5.1",
 		"gh-pages": "^2.2.0"
 	}
 }
