--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "3.4.1",
+		"react-scripts": "^3.4.1",
 		"react-test-renderer": "^16.13.1",
 		"styled-components": "^5.1.0",
 		"yarn": "^1.22.4"
@@ -49,6 +49,7 @@
 	"devDependencies": {
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0",
+		"eslint-config-airbnb-base": "^14.1.0",
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-react": "^7.19.0",
