--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"homepage": "http://firefelix.github.io/dsouvage-homepage",
 	"dependencies": {
+		"@carbon/colors": "^10.9.0",
 		"@carbon/icons-react": "^10.9.3",
 		"@carbon/themes": "^10.10.3",
 		"@testing-library/jest-dom": "^4.2.4",
@@ -13,9 +14,11 @@
 		"carbon-components-react": "^7.10.3",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
+		"history": "^4.10.1",
 		"node-sass": "^4.13.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
+		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.1",
 		"react-test-renderer": "^16.13.1",
