add CI via travis

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"lint": "eslint",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "CI=true react-scripts test --env=jsdom",
+		"test:coverage": "npm test -- --coverage",
 		"eject": "react-scripts eject",
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build"
