--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,14 @@ node_js:
   - "stable"
 cache:
   directories:
-  - node_modules
+    - node_modules
 script:
   - npm test
-  - npm run test:coverage
   - npm run build
-
 deploy:
   provider: pages
   skip_cleanup: true
-  github_token: $github_token
+  github_token: $GITHUB_TOKEN
   local_dir: build
   on:
     branch: master
