--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"yarn": "^1.22.4"
 	},
 	"scripts": {
-		"lint": "eslint",
+		"lint": "eslint ./src/",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "CI=true react-scripts test --env=jsdom",
