--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"enzyme-adapter-react-16": "^1.15.2",
 		"history": "^4.10.1",
 		"node-sass": "^4.13.1",
+		"prop-types": "^15.7.2",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
 		"react-router": "^5.1.2",
@@ -23,6 +24,7 @@
 		"react-scripts": "^3.4.1",
 		"react-test-renderer": "^16.13.1",
 		"styled-components": "^5.1.0",
+		"wowjs": "^1.1.3",
 		"yarn": "^1.22.4"
 	},
 	"scripts": {
