--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-router": "^5.1.2",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.1",
+		"react-scroll": "^1.7.16",
 		"react-test-renderer": "^16.13.1",
 		"styled-components": "^5.1.0",
 		"wowjs": "^1.1.3",
