--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"lint": "eslint ./src/",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "CI=true react-scripts test --env=jsdom",
+		"test": "react-scripts test --env=jsdom",
 		"test:coverage": "npm test -- --coverage",
 		"eject": "react-scripts eject",
 		"predeploy": "npm run build",
