--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: node_js
 node_js:
-  - "stable"
+  - 'stable'
 cache:
   directories:
     - node_modules
 script:
+  - npm run fix-code
+  - npm run fix-styles
   - npm run lint
   - npm test
   - npm run build
