--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"yarn": "^1.22.4"
 	},
 	"scripts": {
+		"fix-code": "prettier-eslint --write 'src/**/*.{js,jsx}' ",
+		"fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' ",
 		"lint": "eslint ./src/",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -57,10 +59,18 @@
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0",
 		"eslint-config-airbnb-base": "^14.1.0",
+		"eslint-config-node": "^4.0.0",
+		"eslint-config-prettier": "^6.10.1",
 		"eslint-plugin-import": "^2.20.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.3",
 		"eslint-plugin-react": "^7.19.0",
 		"eslint-plugin-react-hooks": "^2.5.1",
-		"gh-pages": "^2.2.0"
+		"gh-pages": "^2.2.0",
+		"prettier": "^2.0.4",
+		"prettier-eslint": "^9.0.1",
+		"prettier-eslint-cli": "^5.0.0",
+		"prettier-stylelint": "^0.4.2"
 	}
 }
