--- a/package.json
+++ b/package.json
@@ -1,76 +1,76 @@
 {
-	"name": "portfolio",
-	"version": "0.1.0",
-	"private": true,
-	"homepage": "http://firefelix.github.io/dsouvage-homepage",
-	"dependencies": {
-		"@carbon/colors": "^10.9.0",
-		"@carbon/icons-react": "^10.9.3",
-		"@carbon/themes": "^10.10.3",
-		"@testing-library/jest-dom": "^4.2.4",
-		"@testing-library/react": "^9.5.0",
-		"@testing-library/user-event": "^7.2.1",
-		"carbon-components": "^10.10.3",
-		"carbon-components-react": "^7.10.3",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.2",
-		"history": "^4.10.1",
-		"node-sass": "^4.13.1",
-		"prop-types": "^15.7.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"react-router": "^5.1.2",
-		"react-router-dom": "^5.1.2",
-		"react-scripts": "^3.4.1",
-		"react-scroll": "^1.7.16",
-		"react-test-renderer": "^16.13.1",
-		"styled-components": "^5.1.0",
-		"wowjs": "^1.1.3",
-		"yarn": "^1.22.4"
-	},
-	"scripts": {
-		"fix-code": "prettier-eslint --write 'src/**/*.{js,jsx}' ",
-		"fix-styles": "prettier-stylelint --write 'src/**/*.{css,scss}' ",
-		"lint": "eslint ./src/",
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test --env=jsdom",
-		"test:coverage": "npm test -- --coverage",
-		"eject": "react-scripts eject",
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"eslint": "^6.8.0",
-		"eslint-config-airbnb": "^18.1.0",
-		"eslint-config-airbnb-base": "^14.1.0",
-		"eslint-config-node": "^4.0.0",
-		"eslint-config-prettier": "^6.10.1",
-		"eslint-plugin-import": "^2.20.2",
-		"eslint-plugin-jsx-a11y": "^6.2.3",
-		"eslint-plugin-node": "^11.1.0",
-		"eslint-plugin-prettier": "^3.1.3",
-		"eslint-plugin-react": "^7.19.0",
-		"eslint-plugin-react-hooks": "^2.5.1",
-		"gh-pages": "^2.2.0",
-		"prettier": "^2.0.4",
-		"prettier-eslint": "^9.0.1",
-		"prettier-eslint-cli": "^5.0.0",
-		"prettier-stylelint": "^0.4.2"
-	}
+  "name": "portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "http://firefelix.github.io/dsouvage-homepage",
+  "dependencies": {
+    "@carbon/colors": "^10.9.0",
+    "@carbon/icons-react": "^10.9.3",
+    "@carbon/themes": "^10.10.3",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "carbon-components": "^10.10.3",
+    "carbon-components-react": "^7.10.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "history": "^4.10.1",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.7.16",
+    "react-test-renderer": "^16.13.1",
+    "styled-components": "^5.1.0",
+    "wowjs": "^1.1.3",
+    "yarn": "^1.22.4"
+  },
+  "scripts": {
+    "fix-code": "prettier-eslint --write ./src/**/*.{js,jsx}",
+    "fix-styles": "prettier-stylelint --write ./src/**/*.{css,scss}' ",
+    "lint": "eslint ./src/",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "test:coverage": "npm test -- --coverage",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-config-node": "^4.0.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "gh-pages": "^2.2.0",
+    "prettier": "^2.0.4",
+    "prettier-eslint": "^9.0.1",
+    "prettier-eslint-cli": "^5.0.0",
+    "prettier-stylelint": "^0.4.2"
+  }
 }
