--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ cache:
   directories:
     - node_modules
 script:
-  - npm run fix-code
-  - npm run fix-styles
+  - npm run fix-code-CI
+  - npm run fix-styles-CI
   - npm run lint
   - npm test
   - npm run build
