--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "scripts": {
     "fix-code": "prettier-eslint --write ./src/**/*.{js,jsx}",
     "fix-styles": "prettier-stylelint --write ./src/**/*.{css,scss}' ",
+    "fix-code-CI": "prettier-eslint --write $PWD/'src/**/*.{js,jsx}'",
+    "fix-styles-CI": "prettier-stylelint --write $PWD/'src/**/*.{css,scss}'",
     "lint": "eslint ./src/",
     "start": "react-scripts start",
     "build": "react-scripts build",
