integrate prettier to code base, enforce standards (#8)
* integrate prettier to code base, enforce standards

* fix prettier, run and clean code

* fix eslint versions

* configuring CI prettier

* integrate prettier AND eslint to work with CI pipeline

* ignore data for eslint

* fix eslint and prettier config for CI

* fix eslint prettier

* fix prettier and eslint

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: node_js
 node_js:
-  - "stable"
+  - 'stable'
 cache:
   directories:
     - node_modules
 script:
+  - npm run fix-code
   - npm run lint
   - npm test
   - npm run build
