--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --CI=true --watchAll=false",
     "predeploy": "(npm run fix-code) && (npm run test) && (npm run start)",
-    "test:coverage": "npm test -- --coverage",
+    "test:coverage": "react-scripts test --coverage --env=jsdom --CI=true --watchAll=false --coverageReporters=text-lcov | coveralls",
     "eject": "react-scripts eject",
     "prebuilddeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "^3.0.11",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
