--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - node_modules
 script:
   - npm run fix-code
-  - npm test:coverage
+  - npm run test:coverage
   - npm run build
 deploy:
   provider: pages
