--- a/package.json
+++ b/package.json
@@ -29,14 +29,16 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
-    "fix-code": "prettier --write ./src/**/*.{js,jsx,css,scss}",
-    "lint": "eslint --fix ./src/**/*.{js,jsx}",
+    "prettier": "prettier --write ./src/**/*.{js,jsx,css,scss}",
+    "eslint": "eslint --fix ./src/**/*.{js,jsx}",
+    "fix-code": "(npm run prettier) && (npm run eslint)",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "test:coverage": "npm test -- --coverage",
+    "test": "react-scripts test --env=jsdom --CI=true --watchAll=false",
+    "predeploy": "(npm run fix-code) && (npm run test) && (npm run start)",
+    "test:coverage": "react-scripts test --coverage --env=jsdom --CI=true --watchAll=false --coverageReporters=text-lcov | coveralls",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "prebuilddeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -55,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "^3.0.11",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
