--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^3.2.1",
     "coveralls": "^3.0.11",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
