--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
     - node_modules
 script:
   - npm run fix-code
-  - npm run test:coverage
+  - npm run test
   - npm run build
 deploy:
   provider: pages
@@ -15,3 +15,5 @@ deploy:
   local_dir: build
   on:
     branch: master
+after_success:
+  - npm run test:coverage
