--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^3.2.1",
     "coveralls": "^3.0.11",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
