--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "history": "^4.10.1",
-    "node-sass": "^4.13.1",
+    "jsdoc": "^3.6.5",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-image-gallery": "^1.0.7",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "react-scroll": "^1.7.16",
     "react-test-renderer": "^16.13.1",
     "styled-components": "^5.1.0",
@@ -30,6 +31,7 @@
     "yarn": "^1.22.4"
   },
   "scripts": {
+    "docs": "jsdoc -c jsdoc.json",
     "prettier": "prettier --write ./src/**/*.{js,jsx,css,scss}",
     "eslint": "eslint --fix ./src/**/*.{js,jsx}",
     "fix-code": "(npm run prettier) && (npm run eslint)",
